# bench_checklist

./: Cargo.toml  app.rc  bench_checklist.manifest  build.rs  run_with_log.bat
.claude/: settings.local.json
config/: checklist.json
src/: app.rs  autostart.rs  check_library.rs  config.rs  fixer.rs  main.rs  notifications.rs
src/checkers/: display.rs  mod.rs  power_plan.rs  processes.rs  registry.rs
src/ui/: mod.rs  settings_window.rs  slint_bridge.rs  style.rs  tray.rs
ui/: main.slint  theme.slint  types.slint
ui/components/: check_editor.slint  check_library.slint  check_list.slint  settings_panel.slint  status_card.slint
