[package]
name = "bench_checklist"
version = "0.1.0"
edition = "2021"
description = "Performance testing checklist monitor for Windows"

[dependencies]
# Windows API bindings
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Power",
    "Win32_System_Registry",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
]}

# System tray
tray-icon = "0.19"

# Toast notifications
winrt-notification = "0.5"

# GUI
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.28"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros"] }

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Image handling for tray icons
image = { version = "0.25", default-features = false, features = ["png"] }

# Channel for tray events
crossbeam-channel = "0.5"

# Native file dialogs for export/import
rfd = "0.14"

# Date/time for export timestamps
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
embed-resource = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
codegen-units = 1
